# Aestelo

./: .dockerignore  .gitignore  .npmrc  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  global.css  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  secre.py  turbo.json
backend/: .env.example  Dockerfile  Dockerfile.dev  app.py  celery_worker.py  config.py  exstensions.py  extensions.py  locustfile.py  package.json  pyproject.toml  requirements.txt  schema.sql  test_r2.py
backend/app/: __init__.py  __metadata__.py  app.py  config.py  extensions.py  main.py  plugins.py  settings.py
backend/customizations/: banners.py
backend/forms/: auths_schema.py  post_schema.py  profile_schema.py
backend/middleware/: logging_middleware.py  request_time_middleware.py
backend/migrations/: env.py
backend/models/: __init__.py  auth.py  block_profile.py  collection.py  collection_item.py  followers_and_following.py  likes.py  listeners.py  location.py  music_track.py  post.py  rating.py  report.py  schema_types.py  soft_delete.py  spot.py  spotify_track.py  token_blacklist.py  user.py  user_profile.py  visit.py
backend/routes/: __init__.py  auth.py  auth_required_wrapper.py  block.py  collection.py  follow.py  health.py  logging_wrapper.py  music_track.py  post.py  profile.py  s3.py  spot.py  spotify_track.py  time.py  user_info.py  user_settings.py  visit.py
backend/schemas/: __init__.py  auth_schema.py  auths_schema.py  collection_schema.py  location_schema.py  (+8 more)
(+343 files in other folders)
