[project]
name = "aestelo"
version = "0.1.0"
description = "Backend dependencies for litestar applciation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "geoalchemy2>=0.20.0",
    "litestar-email>=0.4.0",
    "litestar-saq[otel]>=0.7.1",
    "litestar[sqlalchemy,standard]>=2.21.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "pyvips[binary]>=3.1.1",
    "redis>=7.4.0",
    "shapely>=2.1.2",
    "structlog>=25.5.0",
    "types-aiobotocore[s3]>=3.7.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
